# moodsense-ml-api

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  training_model.py
app/: __init__.py  __main__.py  config.py  inference.py  main.py  routes.py  schemas.py
app/api/routes/: predict.py
app/core/: config.py
app/genai/: inference.py
app/ml-models/mood-prediction/: imputer.joblib  rf_focus_model.joblib  scaler.joblib  xgb_focus_model.joblib
app/ml-models/sentiment-analysis/: bilstm_mhsa.keras  bilstm_mhsa_metadata.json  tokenizer.pkl
app/ml-models/sentiment-analysis/bilstm_mhsa_savedmodel/: fingerprint.pb  saved_model.pb
app/ml-models/sentiment-analysis/bilstm_mhsa_savedmodel/variables/: variables.index
app/models/: mood_model.py
app/services/: prediction_service.py
tests/: test_main.py
