[project]
name = "moodsense-ml-api"
version = "0.1.0"
description = "Inference-only ML API for 7-mood text classification."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "dill>=0.3.9",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn==1.6.1",
    "xgboost==3.2.0",
    "uvicorn[standard]>=0.29.0",
    "tensorflow>=2.16.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
]
